--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>"Sumara Prieto - WDD 230 - Web Frontend Development"</title>
   <meta name="description" content="WDD 230 - Web Frontend Development. Sumara Prieto. Course assigment portal">
+  <link rel="icon" href="favicon.ico">
 
 </head>
 
@@ -56,7 +57,7 @@
     </p>
   </footer>
 
-  <script src="scripts/getdates.js"></script> 
+  <script src="scripts/getdates.js"></script>
 
 </body>
 
