still in progress

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <meta name="description" content="WDD 230 - Web Frontend Development. Sumara Prieto. Course assigment portal">
   <meta name="author" content="Sumara Prieto">
 
-  <meta property="og:title" content="Web Frontend Project for WDD 230">
+  <meta property="og:title" content="Homepage - Web Frontend Project for WDD 230">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://github.com/sumapri/wdd230/">
+  <meta property="og:image" content="https://sumapri.github.io/wdd230/#">
 
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/base.css">
@@ -48,8 +49,9 @@
       <hr>
       <ul>
          <li>Week 01 - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a></li>
-         <li>Week 02 - <a href="lesson02/media-query.html" target="_blank">media query</a></li>
-         <li>Week 03</li>
+         <li>Week 02 - <a href="lesson02/design-principles.html
+          " target="_blank"></a></li>
+         <li>"Lesson03/chamber-site-plan.html"</li>
          <li>Week 04</li>
          <li>Week 05</li>
          <li>Week 06</li>
