--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
       <hr>
       <ul>
          <li>Week 01 - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a></li>
-         <li>Week 02 - <a href="lesson02/design-principles.html
-          " target="_blank"></a></li>
-         <li>"Lesson03/chamber-site-plan.html"</li>
+         <li>Week 02:<a href="lesson02/design.html">Web Design Principles</a></li>
+          <li>Week 02:<a href="lesson02/media-query.html">media-query</a></li>
+                <li>Week 02:<a href="lesson02/design-principles.html">Design Princilpes Document</a></li>
+         <li>Week 03</li>
          <li>Week 04</li>
          <li>Week 05</li>
          <li>Week 06</li>
@@ -78,7 +79,8 @@
       <hr>
     </section>
   </main>
-
+  <div></div>
+  <frame src="https://www.google.com/maps/place/Missouri/@38.3046625,-92.436836,7z/data=!3m1!4b1!4m6!3m5!1s0x87c0e6d54822e37d:0xb55bc4590466bd72!8m2!3d37.9642529!4d-91.8318334!16zL20vMDR5Y2g?entry=ttu&g_ep=EgoyMDI0MTAwNy4xIKXMDSoASAFQAw%3D%3D" title="Map of missouri" width="580" height="420" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   <footer>
     <p>&copy; <span id="year"></span>
       .:|:. Sumara Prieto .:|:. Missouri</p>
