--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <li><a href="#">Home</a></li>
       <li><a href="#">site plan</a></li>
       <li><a href="chamber/index.html">Chamber</a></li>
-      <li><a href="https://www.byui.edu/">School</a></li>
+      a<li><a href="https://www.byui.edu/">School</a></li>
       <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?" target="_blank">scripture</a></li>
     </ul>
   </nav>
