--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h3>Learning activities</h3>
       <hr>
       <ul>
-         <li>Week 01 - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a></li>
+         <li>Week 01 - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighhouse.png" target="_blank">Lighthouse</a></li>
          <li>Week 02:<a href="lesson02/design.html">Web Design Principles</a></li>
           <li>Week 02:<a href="lesson02/media-query.html">media-query</a></li>
                 <li>Week 02:<a href="lesson02/design-principles.html">Design Princilpes Document</a></li>
