--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       <h3>Learning activities</h3>
       <hr>
       <ul>
-         <li>Week 01 - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighhouse.png" target="_blank">Lighthouse</a></li>
+         <li>Week 01 - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighhouse.png" target="_blank">Lighthouse</a></li> 
          <li>Week 02:<a href="lesson02/design.html">Web Design Principles</a></li>
           <li>Week 02:<a href="lesson02/media-query.html">media-query</a></li>
                 <li>Week 02:<a href="lesson02/design-principles.html">Design Princilpes Document</a></li>
-         <li>Week 03</li>
+         <li>Week 03: <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | </li>
          <li>Week 04</li>
          <li>Week 05</li>
          <li>Week 06</li>
@@ -80,7 +80,7 @@
     </section>
   </main>
   <div></div>
-  <frame src="https://www.google.com/maps/place/Missouri/@38.3046625,-92.436836,7z/data=!3m1!4b1!4m6!3m5!1s0x87c0e6d54822e37d:0xb55bc4590466bd72!8m2!3d37.9642529!4d-91.8318334!16zL20vMDR5Y2g?entry=ttu&g_ep=EgoyMDI0MTAwNy4xIKXMDSoASAFQAw%3D%3D" title="Map of missouri" width="580" height="420" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3206055.8390634004!2d-92.436836!3d38.30466245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0e6d54822e37d%3A0xb55bc4590466bd72!2sMissouri!5e0!3m2!1sen!2sus!4v1728764416011!5m2!1sen!2sus" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
   <footer>
     <p>&copy; <span id="year"></span>
       .:|:. Sumara Prieto .:|:. Missouri</p>
