--- a/index.html
+++ b/index.html
@@ -11,25 +11,21 @@
   <meta property="og:title" content="Homepage - Web Frontend Project for WDD 230">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://github.com/sumapri/wdd230/">
-  <meta property="og:image" content="https://sumapri.github.io/wdd230/#">
+  <meta property="og:image" content="https://sumapri.github.io/wdd230/">
 
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/larger.css">
   <link rel="icon" href="images/favicon.ico">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&family=Unna:wght@400;700&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
-    <header class="container-header">
-      <div class="container-header-top">
-          <img src="images/profile.webp" alt="Profile Picture" loading="lazy">
-          <h1>Sumara Prieto</h1>
-          <img id="darkMode" src="images/IMG_0445.jpg" alt="DarkMode">
-      </div>
+  <header>
+    <picture>
+      <img src="images/profile.webp" alt="Profile Picture">
+    </picture> 
+    <h1>Sumara Prieto</h1>
+    <button id="menu"></button>
     </header>
 
   <nav class="container-header-bottom">
@@ -52,7 +48,7 @@
          <li>Week 02:<a href="lesson02/design.html">Web Design Principles</a></li>
           <li>Week 02:<a href="lesson02/media-query.html">media-query</a></li>
                 <li>Week 02:<a href="lesson02/design-principles.html">Design Princilpes Document</a></li>
-         <li>Week 03: <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | </li>
+         <li>Week 03:<a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | </li>
          <li>Week 04</li>
          <li>Week 05</li>
          <li>Week 06</li>
