--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     </picture> 
     <h1>Sumara Prieto</h1>
     <button id="menu"></button>
-    </header>
+  </header>
 
-  <nav class="container-header-bottom">
+  <nav class="navigation">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">site plan</a></li>
-      <li><a href="chamber/index.html">Chamber</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="lesson03/chamber-site-plan.html" target="_blank">Site Plan</a></li>
+      <li><a href="chamber/" target="_blank">Chamber</a></li>
       <li><a href="https://www.byui.edu/">School</a></li>
       <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?" target="_blank">scripture</a></li>
     </ul>
@@ -44,11 +44,9 @@
       <h3>Learning activities</h3>
       <hr>
       <ul>
-         <li>Week 01 - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighhouse.png" target="_blank">Lighthouse</a></li> 
-         <li>Week 02:<a href="lesson02/design.html">Web Design Principles</a></li>
-          <li>Week 02:<a href="lesson02/media-query.html">media-query</a></li>
-                <li>Week 02:<a href="lesson02/design-principles.html">Design Princilpes Document</a></li>
-         <li>Week 03:<a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | </li>
+         <li>Week 01: - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighhouse.png" target="_blank">Lighthouse Test</a></li> 
+         <li>Week 02: - <a href="lesson02/design.html" target="_blank">Web Design Principles</a> |<a href="lesson02/media-query.html" target="_blank">Media-Query</a> | <a href="lesson02/design-principles.html" target="_blank">Design Principles Document</a></li>
+         <li>Week 03: - <a href="images/css_combinators.PNG" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | </li>
          <li>Week 04</li>
          <li>Week 05</li>
          <li>Week 06</li>
