--- a/index.html
+++ b/index.html
@@ -63,29 +63,28 @@
     </section>
 
     <section class="card">
-      <h3>"information"</h3>   
+      <h3>"Information"</h3>   
       <hr>
       <ul>
-        <li><a>Missouri</a></li>
+        <li><a>Location</a></li>
         <li><a>Weather</a></li>
         <li><a>Page Visits</a></li>
       </ul>
       <hr>
     </section>
-  </main>
-  <div></div>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3206055.8390634004!2d-92.436836!3d38.30466245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0e6d54822e37d%3A0xb55bc4590466bd72!2sMissouri!5e0!3m2!1sen!2sus!4v1728764416011!5m2!1sen!2sus" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+  
+  
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3206055.8390634004!2d-92.436836!3d38.30466245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0e6d54822e37d%3A0xb55bc4590466bd72!2sMissouri!5e0!3m2!1sen!2sus!4v1728764416011!5m2!1sen!2sus" 
+  title="Missouri" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+ </main>
+  
   <footer>
-    <p>&copy; <span id="year"></span>
+    <p>&copy; <span id="copyright">"Year"</span>
       .:|:. Sumara Prieto .:|:. Missouri</p>
-    <p>
-      Last Modification:
-      <span id="lastModified"></span>
-    </p>
+    <p id="lastModified"></p>
   </footer>
 
-  <script src="scripts/getdates.js" defer></script>
-
+  <script src="scripts/getdates.js"></script>
+  <script src="scripts/hamburger.js"></script>
 </body>
-
 </html>
