--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <header>
     <picture>
-      <img src="images/profile.webp" alt="Profile Picture">
+      <img src="images/Sumara_Prieto.jpg" alt="Profile Picture">
     </picture> 
     <h1>Sumara Prieto</h1>
     <button id="menu"></button>
@@ -46,8 +46,9 @@
       <ul>
          <li>Week 01: - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighhouse.png" target="_blank">Lighthouse Test</a></li> 
          <li>Week 02: - <a href="lesson02/design.html" target="_blank">Web Design Principles</a> |<a href="lesson02/media-query.html" target="_blank">Media-Query</a> | <a href="lesson02/design-principles.html" target="_blank">Design Principles Document</a></li>
-         <li>Week 03: - <a href="images/css_combinators.PNG" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | </li>
-         <li>Week 04</li>
+         <li>Week 03: - <a href="images/css_combinators.PNG" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | <a href="https://codepen.io/sumapri/pen/YzmZeax" target="_blank">Responsive Menu</a>
+          </li>
+         <li>Week 04: - <a href="https://codepen.io/sumapri/pen/LYwWQrx" target="_blank">CSS Pseudo-Classes</a></li>
          <li>Week 05</li>
          <li>Week 06</li>
          <li>Week 07</li>
