--- a/lesson02/media-query.html
+++ b/lesson02/media-query.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sumara Prieto - WDD 230 - Web Frontend Development</title>
-    <meta name="description" content="WDD 230 Web Frontend Development by Sumara Prieto: viewport">
+    <title> - WDD 230 - Media Query</title>
+    <meta name="description" content="Media query learning activity example page">
     <meta name="author" content="Sumara Prieto">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
