--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -23,10 +23,8 @@
     <main>
         <section>
             <h2>Visual Hierarchy</h2> 
-
             <h3>1 apple</h3>
-            <nav><a href="https://www.apple.com//"><www class=>www.aple.com</a></nav>            
-
+            <p><a href="https://www.apple.com//" target="_blank">Apple</a></p>           
             <img src="images/Apple.png" alt="Apple homepage screenshot">
             <p><b>Visual Hierarchy</b> On the Apple website, visual hierarchy is established through the use of large, bold typography for headlines and key images. The homepage prominently displays the latest product in large format, guiding the users attention. Subheadings and supporting text are smaller and less prominent, which helps visitors quickly understand the key offerings without feeling overwhelmed.</p>
           </section>
