--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -23,7 +23,7 @@
     <main>
         <section>
             <h2>Visual Hierarchy</h2> 
-            <h3>1 apple</h3>
+            <h3>Apple</h3>
             <p><a href="https://www.apple.com//" target="_blank">Apple</a></p>           
             <img src="images/Apple.png" alt="Apple homepage screenshot">
             <p><b>Visual Hierarchy</b> On the Apple website, visual hierarchy is established through the use of large, bold typography for headlines and key images. The homepage prominently displays the latest product in large format, guiding the users attention. Subheadings and supporting text are smaller and less prominent, which helps visitors quickly understand the key offerings without feeling overwhelmed.</p>
@@ -33,19 +33,20 @@
               <h2>White Space and Clean Design</h2>
 
               <h3>Airbnb</h3>
-              <nav><a href="https://www.airbnb.com/">www.airbnb.com</a></nav>            
+              <p><a href="https://www.airbnb.com/" target="_blank">www.airbnb.com</a></p>            
   
-              <img src="lesson02/images/BAirbnb
+              <img src="images/BAirbnb
               .png" alt="Airbnb webpage screenshot">
+
               <p><b>2 White Space and Clean Design </b>Airbnb's webpage effectively uses white space to create a clean and uncluttered design. The ample spacing between text, images, and buttons allows users to focus on the content without distractions. This clean layout enhances readability and improves the overall user experience, making it easy for visitors to navigate through listings and information. </p>
           </section>
   
           <section>            
               <h2>Fitt's Law</h2>
               <h3>Spotfy</h3>
-              <nav><a href="https://open.spotify.com/">open.spotfy.com</a></nav>     
+              <p><a href="https://open.spotify.com/">open.spotfy.com</a></p>     
   
-              <img src="lesson02/images/Spotfy.png" alt="spotfy page screenshot">
+              <img src="images/Spotfy.png" alt="spotfy page screenshot">
               <p><b>3 Fitt's Law</b> Spotify's mobile app exemplifies Fitt's Law by placing key controls, like the play button and navigation menu, within easy reach of users thumbs. The buttons are sufficiently large and well-spaced, reducing the time needed to click and improving overall usability. This design consideration enhances user interaction, making it effortless to navigate and control playback.  </p>
           </section>
   
@@ -56,6 +57,6 @@
 
       </footer>
      
-    <script src="lesson02/scripts/getdates.js"></script>
+    <script src="scripts/getdates.js"></script>
   </body>
   </html>
