--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -24,7 +24,8 @@
         <section>
             <h2>Visual Hierarchy</h2> 
             <h3>Apple</h3>
-            <p><a href="https://www.apple.com//" target="_blank">Apple</a></p>           
+            <p><a href="https://www.apple.com/" target="_blank">Apple.com</a></p> 
+                      
             <img src="images/Apple.png" alt="Apple homepage screenshot">
             <p><b>Visual Hierarchy</b> On the Apple website, visual hierarchy is established through the use of large, bold typography for headlines and key images. The homepage prominently displays the latest product in large format, guiding the users attention. Subheadings and supporting text are smaller and less prominent, which helps visitors quickly understand the key offerings without feeling overwhelmed.</p>
           </section>
@@ -35,7 +36,7 @@
               <h3>Airbnb</h3>
               <p><a href="https://www.airbnb.com/" target="_blank">www.airbnb.com</a></p>            
   
-              <img src="images/BAirbnb
+              <img src="images/Airbnb
               .png" alt="Airbnb webpage screenshot">
 
               <p><b>2 White Space and Clean Design </b>Airbnb's webpage effectively uses white space to create a clean and uncluttered design. The ample spacing between text, images, and buttons allows users to focus on the content without distractions. This clean layout enhances readability and improves the overall user experience, making it easy for visitors to navigate through listings and information. </p>
