--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li><a href="lesson03/chamber-site-plan.html" target="_blank">Site Plan</a></li>
       <li><a href="chamber/" target="_blank">Chamber</a></li>
       <li><a href="https://www.byui.edu/">School</a></li>
-      <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?" target="_blank">scripture</a></li>
+      <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng" target="_blank">Scripture</a></li>
     </ul>
   </nav>
 
@@ -46,7 +46,7 @@
       <ul>
          <li>Week 01: - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighhouse.png" target="_blank">Lighthouse Test</a></li> 
          <li>Week 02: - <a href="lesson02/design.html" target="_blank">Web Design Principles</a> |<a href="lesson02/media-query.html" target="_blank">Media-Query</a> | <a href="lesson02/design-principles.html" target="_blank">Design Principles Document</a></li>
-         <li>Week 03: - <a href="images/css_combinators.PNG" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | <a href="https://codepen.io/sumapri/pen/YzmZeax" target="_blank">Responsive Menu</a>
+         <li>Week 03: - <a href="images/css_combinators.png" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | <a href="https://codepen.io/sumapri/pen/YzmZeax" target="_blank">Responsive Menu</a>
           </li>
          <li>Week 04: - <a href="https://codepen.io/sumapri/pen/LYwWQrx" target="_blank">CSS Pseudo-Classes</a></li>
          <li>Week 05</li>
