--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Chamber Site Plan project for WDD 230">
     <meta property="og:type" content="website">
     <meta property="og:image"
-        content="lesson03/images/Springfield.png">
+        content="images/Springfield.png">
     <meta property="og:url" content="https://sumapri.github.io/wdd230/lesson03/chamber-site-plan.html">
 
 
