--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
 <body>
   <header>
     <picture>
-      <img src="images/Sumara_Prieto.jpg" alt="Profile Picture">
-    </picture> 
+      <img id="header-picture" src="images/Sumara_Prieto.jpg" alt="Profile Picture"> 
+    </picture>
     <h1>Sumara Prieto</h1>
     <button id="menu"></button>
   </header>
 
+
   <nav class="navigation">
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="">Home</a></li>
       <li><a href="lesson03/chamber-site-plan.html" target="_blank">Site Plan</a></li>
       <li><a href="chamber/" target="_blank">Chamber</a></li>
       <li><a href="https://www.byui.edu/">School</a></li>
@@ -39,17 +40,21 @@
   </nav>
 
   <main>
-    <h2>"WDD 230 Web Frontend Development"</h2>
-    <section class="card">
+    <h2>"WDD 230: Web Frontend Development"</h2>
+     <section class="card">
+      <div class="card-header"
       <h3>Learning activities</h3>
       <hr>
       <ul>
+    </div>
+    <div class="card-content"
+      <ul classes="la-card">
          <li>Week 01: - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighhouse.png" target="_blank">Lighthouse Test</a></li> 
          <li>Week 02: - <a href="lesson02/design.html" target="_blank">Web Design Principles</a> |<a href="lesson02/media-query.html" target="_blank">Media-Query</a> | <a href="lesson02/design-principles.html" target="_blank">Design Principles Document</a></li>
          <li>Week 03: - <a href="images/css_combinators.png" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | <a href="https://codepen.io/sumapri/pen/YzmZeax" target="_blank">Responsive Menu</a>
           </li>
          <li>Week 04: - <a href="https://codepen.io/sumapri/pen/LYwWQrx" target="_blank">CSS Pseudo-Classes</a></li>
-         <li>Week 05</li>
+         <li>Week 05: - <a href="https://codepen.io/sumapri/pen/gOVRpgg" target="_blank">Book of Mormon - Top 10</a></li>
          <li>Week 06</li>
          <li>Week 07</li>
          <li>Week 08</li>
@@ -60,18 +65,18 @@
          <li>Week 13</li>
          <li>Week 14</li>
       </ul>
-      <hr>
-    </section>
+    </div> 
+  </section>
 
     <section class="card">
-      <h3>"Information"</h3>   
-      <hr>
+      <div class="card-header">
+       <h3>"Information"</h3>   
+      </div>
       <ul>
         <li><a>Location</a></li>
         <li><a>Weather</a></li>
         <li><a>Page Visits</a></li>
       </ul>
-      <hr>
     </section>
   
   
