--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -34,7 +34,7 @@
               <h2>White Space and Clean Design</h2>
 
               <h3>Airbnb</h3>
-              <p><a href="https://www.airbnb.com/" target="_blank">www.airbnb.com</a></p>            
+              <p><a href="https://www.airbnb.com/" target="_blank">Airbnb.com</a></p>            
   
               <img src="images/Airbnb.png" alt="Airbnb webpage screenshot">
 
