--- a/index.html
+++ b/index.html
@@ -3,34 +3,33 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>"Sumara Prieto - WDD 230 - Web Frontend Development"</title>
+  <title>Sumara Prieto - WDD 230 - Web Frontend Development</title>
   <meta name="description" content="WDD 230 - Web Frontend Development. Sumara Prieto. Course assigment portal">
-  <meta name="author" content="Sumara Prieto">
-
-  <meta property="og:title" content="Homepage - Web Frontend Project for WDD 230">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://github.com/sumapri/wdd230/">
-  <meta property="og:image" content="https://sumapri.github.io/wdd230/">
+  <meta name="author" content="Sumara Prieto"/>
+  
+  <meta property="og:title" content="Sumara Prieto - Web Frontend Project for WDD 230">
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://sumapri.github.io/wdd230/">
+  <meta property="og:image" content="">
 
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/larger.css">
-  <link rel="icon" href="images/favicon.ico">
+  
 </head>
 
 <body>
   <header>
-    <picture>
-      <img id="header-picture" src="images/Sumara_Prieto.jpg" alt="Profile Picture"> 
-    </picture>
+    <div id="headertitle">
+      <img id="header-picture" src="images/Sumara_Prieto.jpg" alt="Profile Picture" width="200">
     <h1>Sumara Prieto</h1>
-    <button id="menu"></button>
-  </header>
+    <div id="menu"></div>
+    </div>
 
-
-  <nav class="navigation">
-    <ul>
+  <nav>
+    <ul class="navigation">
       <li><a href="">Home</a></li>
       <li><a href="lesson03/chamber-site-plan.html" target="_blank">Site Plan</a></li>
       <li><a href="chamber/" target="_blank">Chamber</a></li>
@@ -38,15 +37,15 @@
       <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng" target="_blank">Scripture</a></li>
     </ul>
   </nav>
+  </header>
 
-  <main>
-    <h2>"WDD 230: Web Frontend Development"</h2>
+<main>
+  <h2 class="attribute">"WDD 230: Web Frontend Development"</h2>
+  <div class="card-grid">
      <section class="card">
-      <div class="card-header"
+      <div class="card-header">
       <h3>Learning activities</h3>
-      <hr>
-      <ul>
-    </div>
+      </div>
     <div class="card-content"
       <ul classes="la-card">
          <li>Week 01: - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighhouse.png" target="_blank">Lighthouse Test</a></li> 
@@ -72,26 +71,31 @@
       <div class="card-header">
        <h3>"Information"</h3>   
       </div>
-      <ul>
-        <li><a>Location</a></li>
-        <li><a>Weather</a></li>
-        <li><a>Page Visits</a></li>
-      </ul>
+      <div class="card-content">
+      </div>
     </section>
-  
-  
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3206055.8390634004!2d-92.436836!3d38.30466245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0e6d54822e37d%3A0xb55bc4590466bd72!2sMissouri!5e0!3m2!1sen!2sus!4v1728764416011!5m2!1sen!2sus" 
-  title="Missouri" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
- </main>
+    <div class="map">
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3206055.8390634004!2d-92.436836!3d38.30466245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0e6d54822e37d%3A0xb55bc4590466bd72!2sMissouri!5e0!3m2!1sen!2sus!4v1728764416011!5m2!1sen!2sus" width="600"
+       height="450" 
+       style="border:0;" 
+       allowfullscreen="" 
+       loading="lazy" 
+       referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </div>
+</main>
   
   <footer>
-    <p>&copy; <span id="copyright">"Year"</span>
-      .:|:. Sumara Prieto .:|:. Missouri</p>
+    <div class="footer-info">
+      <div class="copyright">
+       <p><span id="copyright">"Year"</span>
+        .:|:. Sumara Prieto .:|:. Missouri</p>
+      </div>     
+    </div>
     <p id="lastModified"></p>
   </footer>
 
   <script src="scripts/getdates.js"></script>
-  <script src="scripts/hamburger.js"></script>
 </body>
 </html>
 
