--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -4,83 +4,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon.ico">
     <title>Springfield Chamber of Commerce - Site Plan</title>
     <meta name="description" content="Site Plan for Springfield Chamber of Commerce">
     <meta name="author" content="Sumara Prieto">
-
-    <meta property="og:title" content="Chamber Site Plan project for WDD 230">
-    <meta property="og:type" content="website">
-    <meta property="og:image"
-        content="images/Springfield.png">
-    <meta property="og:url" content="https://sumapri.github.io/wdd230/lesson03/chamber-site-plan.html">
-
-
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="styles/chamber-site-plan.css">
 </head>
-
 <body>
     <header>
-        <h1>Springfield Chamber of Commerce - Site Plan</h1>
+        <h1>Missouri Chamber of Comerce Site Plan</h1>
+        <h2>Sumara Prieto</h2>
     </header>
-
     <main>
         <section>
-            <h2>1 - Site Name</h2>
-            <p><strong>Name:</strong> "Springfield Chamber of Commerce"</p>
-            <p><strong>Justification:</strong> This name indicates the geographical location, the purpose of the site
-                and the services that will be offered in Springfield.</p>
+            <h2>Site Name</h2>
+            <h3>Missouri Chamber of Commerce</h3>
         </section>
-
         <section>
-            <h2>2 - Site Purpose</h2>
-            <p><strong>Purpose:</strong> The Springfield Chamber of Commerce is a hub for exploring valuable
-                resources such as guides, workshops, and industry reports to support business growth and development and
-                stay informed
-                about economic trends. It also allows access to a comprehensive listing of local businesses, including
-                contact
-                information and descriptions, to facilitate networking and collaboration.</p>
+            <h2>Purpose</h2>
+            <p>
+                The Springfield Area Chamber of Commerce top priority is bringing visitors to town and through the doors of your business. We take pride in serving as the voice of nearly 1,000 members, marketing to millions of visitors, and growing the region through economic development. Schedule a meeting today to begin sharing your story and to help shape the future of our community.
+                Also,the purpose of the site
+                and the services that will be offered in Springfield is help the community around this area to have the best experience and service their never imagined before.
+            </p>
         </section>
-
         <section>
-            <h2>3 - Scenarios</h2>
+            <h2>Scenarios</h2>
             <ul>
+                <li>We advocate for specific industries or regions and we can provide training and educational opportunities for members.</li>
                 <li>"What are the upcoming networking events hosted by the Chamber?"</li>
                 <li>"What campaigns were conducted to help women-led businesses grow in the region in the last five
                     years?"</li>
                 <li>"What was the latest research carried out by the chamber in the region? Where can I get the results"
                 </li>
-                <li>"How can I suggest new surveys to the chamber?"</li>
+                <li>"How can I suggest new surveys to the chamber?"</li>   
+                            
             </ul>
         </section>
-
         <section>
-            <h2>4 - Color Schema</h2>
-            <p><strong>Primary Color (Picton Blue #00A6ED):</strong> Used for headers, important links, and other key elements to denote professionalism and trust. Blue is a color of loyalty, strenght, wisdom and trust in the site design.</p>
-            <p><strong>Accent Color (Apple green #7FB800):</strong> Used for buttons, highlighted text, and active
-                elements to draw attention and create a visually appealing contrast. Apple green is a color that is considered a slightly darker yellowish-green, which conveys a sense of reliability and groundedness.</p>
-            <p><strong>Background Color (Selective yellow #FFB400):</strong> Selective Yellow is a warm color that it has high lightness and high saturation.</p>
-            <p><strong>Text Color (Berkeley blue #OD2C54):</strong> Used for the main body text, this near-black shade ensures excellent readability against lighter backgrounds and contributes to a minimalist and elegant aesthetic.</p>
-            <p><strong>Secondary Text Color (Tangelo #F6511D):</strong> Used for text over areas with the primary Berkeley blue
-                background or other dark sections. This color choice ensures high contrast and readability in
-                varied visual contexts.</p>
-            <img class="color-img" src="lesson03/images/color-pallet.png" alt="Color Pallet">
+            <h2>Color Schema</h2>
+            <h4>Color Palette URL</h4>
+            <a href="https://coolors.co/ff9fb2-fbdce2-0acdff-60ab9a-dedee0" target="_blank">Color Palette</a>
+            <table class="colors">
+                <tr>
+                    <th>Primary</th>
+                    <th>Secondary</th>
+                    <th>Accent 1</th>
+                    <th>Accent 2</th>
+                    <th>Accent 3</th>
+                </tr>
+                <tr>
+                    <td class="primary">#60AB9A</td> 
+                    <td class="secondary">#FBDCE2</td>
+                    <td class="accent1">#0ACDFF</td>
+                    <td class="accent2">#FF9FB2</td>
+                    <td class="accent3">#DEDEEO</td>
+                </tr>
+            </table>
         </section>
-
         <section>
-            <h2>5 - Typography</h2>
-            <p>Primary Font: 'Josefim Slab' for headings to add modern design.</p>
-            <p>Secondary Font: 'Alegreya' for body text due to its high readability and good compatibility.</p>
+            <h1>Typography</h1>
+            <h4>
+                Heading Font: Roboto
+            </h4>
+            <h4>
+                Paragraph Font: Montserrat
+            </h4>
+            <h3>Paragraph example</h3>
+            <p>
+                The amber droplet hung from the branch, reaching fullness and ready to drop. It waited. While many of the other droplets were satisfied to form as big as they could and release, this droplet had other plans. It wanted to be part of history. It wanted to be remembered long after all the other droplets had dissolved into history. So it waited for the perfect specimen to fly by to trap and capture that it hoped would eventually be discovered hundreds of years in the future.
+            </p>
         </section>
-
-        <section>
-            <h2>6 - Wireframes</h2>
-            <p>Desktop version wireframe for home page:</p>
-            <img class="desktop-wireframe-img" src="lesson03/images/wireframedesktopview.png" alt="Desktop wireframe">
-            <p>Movile version wireframe for home page:</p>
-            <img class="mobile-wireframe-img" src="lesson03/images/wireframe.mobileview.png" alt="Mobile wireframe">
-        </section>
+            <section>
+                <h2>Wireframes</h2>
+                <h4>Desktop version wireframe for home page:</h4>
+                <img class="desktop-wireframe-img" src="/images/wireframedesktopview.png" alt="Desktop wireframe">
+                <p>Movile version wireframe for home page:</p>
+                <img class="mobile-wireframe-img" src="/images/wireframe.mobileview.png" alt="Mobile wireframe">
+            </section>
     </main>
 
     <footer>
