--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <header>
-    <div id="headertitle">
+    <div id="title">
       <img id="header-picture" src="images/Sumara_Prieto.jpg" alt="Profile Picture" width="200">
     <h1>Sumara Prieto</h1>
     <div id="menu"></div>
