--- a/chamber/index.html
+++ b/chamber/index.html
@@ -91,7 +91,7 @@
                 <address>
                   202 S. John Q Hammons Pwy <br>
                     
-Springfield, MO 65806<br>
+Springfield, MO<br>
                     <a class="footer-btn" href="">Email Us</a>
                 </address>
             </div>
